// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._18cjd3s10,html._18cjd3s10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1c69nho0 _10ruptc10 _10ruptc13">
+        <div class="_1epyuoj0 _18cjd3s8p _18cjd3s7l _18cjd3sax _18cjd3s9t _18cjd3s5d _18cjd3s69 _18cjd3si9 _18cjd3s4j _18cjd3s4c _10ruptc10 _10ruptc13 _18cjd3s33 _18cjd3s36">
+          <span class="_1epyuoj0 _18cjd3s4x _10ruptc0 _10ruptc1 _10ruptc1t _10ruptca _1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1epyuoj0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1epyuoj1 {
  display: block;
}
._1epyuoj2 {
  line-height: 1;
}
._1epyuoj3 {
  list-style: none;
}
._1epyuoj4 {
  quotes: none;
}
._1epyuoj4:after,
._1epyuoj4:before {
  content: "";
}
._1epyuoj5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1epyuoj6 {
  -webkit-appearance: none;
  appearance: none;
}
._1epyuoj7 {
  background-color: transparent;
}
._1epyuoj8 {
  outline: var(--_1qis2nl10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1epyuoj8:focus-visible {
  outline-color: var(--_1qis2nlm);
}
._1epyuoja {
  color: inherit;
}
._1epyuojb:disabled {
  opacity: 1;
}
._1epyuojb::-ms-expand {
  display: none;
}
._1epyuojd[type="number"] {
  -moz-appearance: textfield;
}
._1epyuojd[type="number"]::-webkit-inner-spin-button,
._1epyuojd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1epyuojd::-ms-clear {
  display: none;
}
._1epyuojd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1epyuojg {
  color: inherit;
  text-decoration: none;
}
._18cjd3s0 {
  overflow: hidden;
}
._18cjd3s1 {
  overflow: scroll;
}
._18cjd3s2 {
  overflow: visible;
}
._18cjd3s3 {
  overflow: auto;
}
._18cjd3s4 {
  -webkit-user-select: none;
  user-select: none;
}
._18cjd3s5 {
  outline: var(--_1qis2nl10) solid transparent;
  transition: outline-color 0.125s ease;
}
._18cjd3s5:focus-visible {
  outline-color: var(--_1qis2nlm);
}
._18cjd3s6 {
  opacity: 0;
}
._18cjd3s7 {
  z-index: 0;
}
._18cjd3s8 {
  z-index: 1;
}
._18cjd3s9 {
  z-index: 2;
}
._18cjd3sa {
  z-index: 90;
}
._18cjd3sb {
  z-index: 100;
}
._18cjd3sc {
  z-index: 200;
}
._18cjd3sd {
  z-index: 290;
}
._18cjd3se {
  z-index: 300;
}
._18cjd3sf {
  z-index: 400;
}
._18cjd3sg {
  cursor: default;
}
._18cjd3sh {
  cursor: pointer;
}
._18cjd3si {
  pointer-events: none;
}
._18cjd3sj {
  top: 0;
}
._18cjd3sk {
  bottom: 0;
}
._18cjd3sl {
  left: 0;
}
._18cjd3sm {
  right: 0;
}
._18cjd3sn {
  height: 100%;
}
._18cjd3so {
  height: var(--_1qis2nl9);
}
._18cjd3sp {
  width: 100%;
}
._18cjd3sq {
  width: var(--_1qis2nl9);
}
._18cjd3sr {
  min-width: 0;
}
._18cjd3ss {
  max-width: var(--_1qis2nl11);
}
._18cjd3st {
  max-width: var(--_1qis2nl12);
}
._18cjd3su {
  max-width: var(--_1qis2nl13);
}
._18cjd3sv {
  max-width: var(--_1qis2nl14);
}
._18cjd3sw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._18cjd3sx {
  transition: var(--_1qis2nl5h);
}
._18cjd3sy {
  transition: var(--_1qis2nl5i);
}
._18cjd3sz:active {
  transform: var(--_1qis2nl5j);
}
html._18cjd3s10 ._18cjd3s12,
html:not(._18cjd3s10) ._18cjd3s11 {
  background: var(--_1qis2nl1s);
}
html._18cjd3s10 ._18cjd3s14,
html:not(._18cjd3s10) ._18cjd3s13 {
  background: var(--_1qis2nl1t);
}
html._18cjd3s10 ._18cjd3s16,
html:not(._18cjd3s10) ._18cjd3s15 {
  background: var(--_1qis2nl1u);
}
html._18cjd3s10 ._18cjd3s18,
html:not(._18cjd3s10) ._18cjd3s17 {
  background: var(--_1qis2nl1v);
}
html._18cjd3s10 ._18cjd3s1a,
html:not(._18cjd3s10) ._18cjd3s19 {
  background: var(--_1qis2nl1w);
}
html._18cjd3s10 ._18cjd3s1c,
html:not(._18cjd3s10) ._18cjd3s1b {
  background: var(--_1qis2nl1x);
}
html._18cjd3s10 ._18cjd3s1e,
html:not(._18cjd3s10) ._18cjd3s1d {
  background: var(--_1qis2nl1y);
}
html._18cjd3s10 ._18cjd3s1g,
html:not(._18cjd3s10) ._18cjd3s1f {
  background: var(--_1qis2nl1z);
}
html._18cjd3s10 ._18cjd3s1i,
html:not(._18cjd3s10) ._18cjd3s1h {
  background: var(--_1qis2nl20);
}
html._18cjd3s10 ._18cjd3s1k,
html:not(._18cjd3s10) ._18cjd3s1j {
  background: var(--_1qis2nl21);
}
html._18cjd3s10 ._18cjd3s1m,
html:not(._18cjd3s10) ._18cjd3s1l {
  background: var(--_1qis2nl22);
}
html._18cjd3s10 ._18cjd3s1o,
html:not(._18cjd3s10) ._18cjd3s1n {
  background: var(--_1qis2nl23);
}
html._18cjd3s10 ._18cjd3s1q,
html:not(._18cjd3s10) ._18cjd3s1p {
  background: var(--_1qis2nl24);
}
html._18cjd3s10 ._18cjd3s1s,
html:not(._18cjd3s10) ._18cjd3s1r {
  background: var(--_1qis2nl25);
}
html._18cjd3s10 ._18cjd3s1u,
html:not(._18cjd3s10) ._18cjd3s1t {
  background: var(--_1qis2nl26);
}
html._18cjd3s10 ._18cjd3s1w,
html:not(._18cjd3s10) ._18cjd3s1v {
  background: var(--_1qis2nl27);
}
html._18cjd3s10 ._18cjd3s1y,
html:not(._18cjd3s10) ._18cjd3s1x {
  background: var(--_1qis2nl28);
}
html._18cjd3s10 ._18cjd3s20,
html:not(._18cjd3s10) ._18cjd3s1z {
  background: var(--_1qis2nl29);
}
html._18cjd3s10 ._18cjd3s22,
html:not(._18cjd3s10) ._18cjd3s21 {
  background: var(--_1qis2nl2a);
}
html._18cjd3s10 ._18cjd3s24,
html:not(._18cjd3s10) ._18cjd3s23 {
  background: var(--_1qis2nl2b);
}
html._18cjd3s10 ._18cjd3s26,
html:not(._18cjd3s10) ._18cjd3s25 {
  background: var(--_1qis2nl2c);
}
html._18cjd3s10 ._18cjd3s28,
html:not(._18cjd3s10) ._18cjd3s27 {
  background: var(--_1qis2nl2d);
}
html._18cjd3s10 ._18cjd3s2a,
html:not(._18cjd3s10) ._18cjd3s29 {
  background: var(--_1qis2nl2e);
}
html._18cjd3s10 ._18cjd3s2c,
html:not(._18cjd3s10) ._18cjd3s2b {
  background: var(--_1qis2nl2f);
}
html._18cjd3s10 ._18cjd3s2e,
html:not(._18cjd3s10) ._18cjd3s2d {
  background: var(--_1qis2nl2g);
}
html._18cjd3s10 ._18cjd3s2g,
html:not(._18cjd3s10) ._18cjd3s2f {
  background: var(--_1qis2nl2h);
}
html._18cjd3s10 ._18cjd3s2i,
html:not(._18cjd3s10) ._18cjd3s2h {
  background: var(--_1qis2nl2i);
}
html._18cjd3s10 ._18cjd3s2k,
html:not(._18cjd3s10) ._18cjd3s2j {
  background: var(--_1qis2nl2j);
}
html._18cjd3s10 ._18cjd3s2m,
html:not(._18cjd3s10) ._18cjd3s2l {
  background: var(--_1qis2nl2k);
}
html._18cjd3s10 ._18cjd3s2o,
html:not(._18cjd3s10) ._18cjd3s2n {
  background: var(--_1qis2nl2l);
}
html._18cjd3s10 ._18cjd3s2q,
html:not(._18cjd3s10) ._18cjd3s2p {
  background: var(--_1qis2nl2m);
}
html._18cjd3s10 ._18cjd3s2s,
html:not(._18cjd3s10) ._18cjd3s2r {
  background: var(--_1qis2nl2n);
}
html._18cjd3s10 ._18cjd3s2u,
html:not(._18cjd3s10) ._18cjd3s2t {
  background: var(--_1qis2nl2o);
}
html._18cjd3s10 ._18cjd3s2w,
html:not(._18cjd3s10) ._18cjd3s2v {
  background: var(--_1qis2nl2p);
}
html._18cjd3s10 ._18cjd3s2y,
html:not(._18cjd3s10) ._18cjd3s2x {
  background: var(--_1qis2nl2q);
}
html._18cjd3s10 ._18cjd3s30,
html:not(._18cjd3s10) ._18cjd3s2z {
  background: var(--_1qis2nl2r);
}
html._18cjd3s10 ._18cjd3s32,
html:not(._18cjd3s10) ._18cjd3s31 {
  background: var(--_1qis2nl2s);
}
html._18cjd3s10 ._18cjd3s34,
html:not(._18cjd3s10) ._18cjd3s33 {
  background: var(--_1qis2nl2t);
}
html._18cjd3s10 ._18cjd3s36,
html:not(._18cjd3s10) ._18cjd3s35 {
  background: var(--_1qis2nl2u);
}
html._18cjd3s10 ._18cjd3s38,
html:not(._18cjd3s10) ._18cjd3s37 {
  box-shadow: var(--_1qis2nl5k);
}
html._18cjd3s10 ._18cjd3s3a,
html:not(._18cjd3s10) ._18cjd3s39 {
  box-shadow: var(--_1qis2nl5l);
}
html._18cjd3s10 ._18cjd3s3c,
html:not(._18cjd3s10) ._18cjd3s3b {
  box-shadow: var(--_1qis2nl5m);
}
html._18cjd3s10 ._18cjd3s3e,
html:not(._18cjd3s10) ._18cjd3s3d {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlf);
}
html._18cjd3s10 ._18cjd3s3g,
html:not(._18cjd3s10) ._18cjd3s3f {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlg);
}
html._18cjd3s10 ._18cjd3s3i,
html:not(._18cjd3s10) ._18cjd3s3h {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlf);
}
html._18cjd3s10 ._18cjd3s3k,
html:not(._18cjd3s10) ._18cjd3s3j {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlg);
}
html._18cjd3s10 ._18cjd3s3m,
html:not(._18cjd3s10) ._18cjd3s3l {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlh);
}
html._18cjd3s10 ._18cjd3s3o,
html:not(._18cjd3s10) ._18cjd3s3n {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nli);
}
html._18cjd3s10 ._18cjd3s3q,
html:not(._18cjd3s10) ._18cjd3s3p {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlj);
}
html._18cjd3s10 ._18cjd3s3s,
html:not(._18cjd3s10) ._18cjd3s3r {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlj);
}
html._18cjd3s10 ._18cjd3s3u,
html:not(._18cjd3s10) ._18cjd3s3t {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlk);
}
html._18cjd3s10 ._18cjd3s3w,
html:not(._18cjd3s10) ._18cjd3s3v {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlk);
}
html._18cjd3s10 ._18cjd3s3y,
html:not(._18cjd3s10) ._18cjd3s3x {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nll);
}
html._18cjd3s10 ._18cjd3s40,
html:not(._18cjd3s10) ._18cjd3s3z {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nln);
}
html._18cjd3s10 ._18cjd3s42,
html:not(._18cjd3s10) ._18cjd3s41 {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nln);
}
html._18cjd3s10 ._18cjd3s44,
html:not(._18cjd3s10) ._18cjd3s43 {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlo);
}
html._18cjd3s10 ._18cjd3s46,
html:not(._18cjd3s10) ._18cjd3s45 {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlo);
}
html._18cjd3s10 ._18cjd3s48,
html:not(._18cjd3s10) ._18cjd3s47 {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlp);
}
html._18cjd3s10 ._18cjd3s4a,
html:not(._18cjd3s10) ._18cjd3s49 {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlq);
}
html._18cjd3s10 ._18cjd3s4c,
html:not(._18cjd3s10) ._18cjd3s4b {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlr);
}
html._18cjd3s10 ._18cjd3s4e,
html:not(._18cjd3s10) ._18cjd3s4d {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nlr);
}
html._18cjd3s10 ._18cjd3s4g,
html:not(._18cjd3s10) ._18cjd3s4f {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nls);
}
html._18cjd3s10 ._18cjd3s4i,
html:not(._18cjd3s10) ._18cjd3s4h {
  box-shadow: inset 0 0 0 var(--_1qis2nlz) var(--_1qis2nls);
}
html._18cjd3s10 ._18cjd3s4k,
html:not(._18cjd3s10) ._18cjd3s4j {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlt);
}
html._18cjd3s10 ._18cjd3s4m,
html:not(._18cjd3s10) ._18cjd3s4l {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlu);
}
html._18cjd3s10 ._18cjd3s4o,
html:not(._18cjd3s10) ._18cjd3s4n {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlv);
}
html._18cjd3s10 ._18cjd3s4q,
html:not(._18cjd3s10) ._18cjd3s4p {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlw);
}
html._18cjd3s10 ._18cjd3s4s,
html:not(._18cjd3s10) ._18cjd3s4r {
  box-shadow: inset 0 0 0 var(--_1qis2nly) var(--_1qis2nlx);
}
._18cjd3s4t {
  display: none;
}
._18cjd3s4x {
  display: block;
}
._18cjd3s51 {
  display: inline;
}
._18cjd3s55 {
  display: inline-block;
}
._18cjd3s59 {
  display: flex;
}
._18cjd3s5d {
  position: relative;
}
._18cjd3s5h {
  position: absolute;
}
._18cjd3s5l {
  position: fixed;
}
._18cjd3s5p {
  position: sticky;
}
._18cjd3s5t {
  border-radius: 0;
}
._18cjd3s5x {
  border-radius: 9999px;
}
._18cjd3s61 {
  border-radius: var(--_1qis2nlb);
}
._18cjd3s65 {
  border-radius: var(--_1qis2nlc);
}
._18cjd3s69 {
  border-radius: var(--_1qis2nld);
}
._18cjd3s6d {
  border-radius: var(--_1qis2nle);
}
._18cjd3s6h {
  gap: var(--_1qis2nl0);
}
._18cjd3s6l {
  gap: var(--_1qis2nl1);
}
._18cjd3s6p {
  gap: var(--_1qis2nl2);
}
._18cjd3s6t {
  gap: var(--_1qis2nl3);
}
._18cjd3s6x {
  gap: var(--_1qis2nl4);
}
._18cjd3s71 {
  gap: var(--_1qis2nl5);
}
._18cjd3s75 {
  gap: var(--_1qis2nl6);
}
._18cjd3s79 {
  gap: var(--_1qis2nl7);
}
._18cjd3s7d {
  gap: var(--_1qis2nl8);
}
._18cjd3s7h {
  gap: 0;
}
._18cjd3s7l {
  padding-top: var(--_1qis2nl0);
}
._18cjd3s7p {
  padding-top: var(--_1qis2nl1);
}
._18cjd3s7t {
  padding-top: var(--_1qis2nl2);
}
._18cjd3s7x {
  padding-top: var(--_1qis2nl3);
}
._18cjd3s81 {
  padding-top: var(--_1qis2nl4);
}
._18cjd3s85 {
  padding-top: var(--_1qis2nl5);
}
._18cjd3s89 {
  padding-top: var(--_1qis2nl6);
}
._18cjd3s8d {
  padding-top: var(--_1qis2nl7);
}
._18cjd3s8h {
  padding-top: var(--_1qis2nl8);
}
._18cjd3s8l {
  padding-top: 0;
}
._18cjd3s8p {
  padding-bottom: var(--_1qis2nl0);
}
._18cjd3s8t {
  padding-bottom: var(--_1qis2nl1);
}
._18cjd3s8x {
  padding-bottom: var(--_1qis2nl2);
}
._18cjd3s91 {
  padding-bottom: var(--_1qis2nl3);
}
._18cjd3s95 {
  padding-bottom: var(--_1qis2nl4);
}
._18cjd3s99 {
  padding-bottom: var(--_1qis2nl5);
}
._18cjd3s9d {
  padding-bottom: var(--_1qis2nl6);
}
._18cjd3s9h {
  padding-bottom: var(--_1qis2nl7);
}
._18cjd3s9l {
  padding-bottom: var(--_1qis2nl8);
}
._18cjd3s9p {
  padding-bottom: 0;
}
._18cjd3s9t {
  padding-right: var(--_1qis2nl0);
}
._18cjd3s9x {
  padding-right: var(--_1qis2nl1);
}
._18cjd3sa1 {
  padding-right: var(--_1qis2nl2);
}
._18cjd3sa5 {
  padding-right: var(--_1qis2nl3);
}
._18cjd3sa9 {
  padding-right: var(--_1qis2nl4);
}
._18cjd3sad {
  padding-right: var(--_1qis2nl5);
}
._18cjd3sah {
  padding-right: var(--_1qis2nl6);
}
._18cjd3sal {
  padding-right: var(--_1qis2nl7);
}
._18cjd3sap {
  padding-right: var(--_1qis2nl8);
}
._18cjd3sat {
  padding-right: 0;
}
._18cjd3sax {
  padding-left: var(--_1qis2nl0);
}
._18cjd3sb1 {
  padding-left: var(--_1qis2nl1);
}
._18cjd3sb5 {
  padding-left: var(--_1qis2nl2);
}
._18cjd3sb9 {
  padding-left: var(--_1qis2nl3);
}
._18cjd3sbd {
  padding-left: var(--_1qis2nl4);
}
._18cjd3sbh {
  padding-left: var(--_1qis2nl5);
}
._18cjd3sbl {
  padding-left: var(--_1qis2nl6);
}
._18cjd3sbp {
  padding-left: var(--_1qis2nl7);
}
._18cjd3sbt {
  padding-left: var(--_1qis2nl8);
}
._18cjd3sbx {
  padding-left: 0;
}
._18cjd3sc1 {
  margin-top: var(--_1qis2nl0);
}
._18cjd3sc5 {
  margin-top: var(--_1qis2nl1);
}
._18cjd3sc9 {
  margin-top: var(--_1qis2nl2);
}
._18cjd3scd {
  margin-top: var(--_1qis2nl3);
}
._18cjd3sch {
  margin-top: var(--_1qis2nl4);
}
._18cjd3scl {
  margin-top: var(--_1qis2nl5);
}
._18cjd3scp {
  margin-top: var(--_1qis2nl6);
}
._18cjd3sct {
  margin-top: var(--_1qis2nl7);
}
._18cjd3scx {
  margin-top: var(--_1qis2nl8);
}
._18cjd3sd1 {
  margin-top: 0;
}
._18cjd3sd5 {
  margin-bottom: var(--_1qis2nl0);
}
._18cjd3sd9 {
  margin-bottom: var(--_1qis2nl1);
}
._18cjd3sdd {
  margin-bottom: var(--_1qis2nl2);
}
._18cjd3sdh {
  margin-bottom: var(--_1qis2nl3);
}
._18cjd3sdl {
  margin-bottom: var(--_1qis2nl4);
}
._18cjd3sdp {
  margin-bottom: var(--_1qis2nl5);
}
._18cjd3sdt {
  margin-bottom: var(--_1qis2nl6);
}
._18cjd3sdx {
  margin-bottom: var(--_1qis2nl7);
}
._18cjd3se1 {
  margin-bottom: var(--_1qis2nl8);
}
._18cjd3se5 {
  margin-bottom: 0;
}
._18cjd3se9 {
  margin-right: var(--_1qis2nl0);
}
._18cjd3sed {
  margin-right: var(--_1qis2nl1);
}
._18cjd3seh {
  margin-right: var(--_1qis2nl2);
}
._18cjd3sel {
  margin-right: var(--_1qis2nl3);
}
._18cjd3sep {
  margin-right: var(--_1qis2nl4);
}
._18cjd3set {
  margin-right: var(--_1qis2nl5);
}
._18cjd3sex {
  margin-right: var(--_1qis2nl6);
}
._18cjd3sf1 {
  margin-right: var(--_1qis2nl7);
}
._18cjd3sf5 {
  margin-right: var(--_1qis2nl8);
}
._18cjd3sf9 {
  margin-right: 0;
}
._18cjd3sfd {
  margin-left: var(--_1qis2nl0);
}
._18cjd3sfh {
  margin-left: var(--_1qis2nl1);
}
._18cjd3sfl {
  margin-left: var(--_1qis2nl2);
}
._18cjd3sfp {
  margin-left: var(--_1qis2nl3);
}
._18cjd3sft {
  margin-left: var(--_1qis2nl4);
}
._18cjd3sfx {
  margin-left: var(--_1qis2nl5);
}
._18cjd3sg1 {
  margin-left: var(--_1qis2nl6);
}
._18cjd3sg5 {
  margin-left: var(--_1qis2nl7);
}
._18cjd3sg9 {
  margin-left: var(--_1qis2nl8);
}
._18cjd3sgd {
  margin-left: 0;
}
._18cjd3sgh {
  align-items: flex-start;
}
._18cjd3sgl {
  align-items: center;
}
._18cjd3sgp {
  align-items: flex-end;
}
._18cjd3sgt {
  justify-content: flex-start;
}
._18cjd3sgx {
  justify-content: center;
}
._18cjd3sh1 {
  justify-content: flex-end;
}
._18cjd3sh5 {
  justify-content: space-between;
}
._18cjd3sh9 {
  flex-direction: row;
}
._18cjd3shd {
  flex-direction: row-reverse;
}
._18cjd3shh {
  flex-direction: column;
}
._18cjd3shl {
  flex-direction: column-reverse;
}
._18cjd3shp {
  flex-wrap: wrap;
}
._18cjd3sht {
  flex-wrap: nowrap;
}
._18cjd3shx {
  flex-shrink: 0;
}
._18cjd3si1 {
  flex-grow: 0;
}
._18cjd3si5 {
  flex-grow: 1;
}
._18cjd3si9 {
  text-align: left;
}
._18cjd3sid {
  text-align: center;
}
._18cjd3sih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._18cjd3s4u {
    display: none;
  }
  ._18cjd3s4y {
    display: block;
  }
  ._18cjd3s52 {
    display: inline;
  }
  ._18cjd3s56 {
    display: inline-block;
  }
  ._18cjd3s5a {
    display: flex;
  }
  ._18cjd3s5e {
    position: relative;
  }
  ._18cjd3s5i {
    position: absolute;
  }
  ._18cjd3s5m {
    position: fixed;
  }
  ._18cjd3s5q {
    position: sticky;
  }
  ._18cjd3s5u {
    border-radius: 0;
  }
  ._18cjd3s5y {
    border-radius: 9999px;
  }
  ._18cjd3s62 {
    border-radius: var(--_1qis2nlb);
  }
  ._18cjd3s66 {
    border-radius: var(--_1qis2nlc);
  }
  ._18cjd3s6a {
    border-radius: var(--_1qis2nld);
  }
  ._18cjd3s6e {
    border-radius: var(--_1qis2nle);
  }
  ._18cjd3s6i {
    gap: var(--_1qis2nl0);
  }
  ._18cjd3s6m {
    gap: var(--_1qis2nl1);
  }
  ._18cjd3s6q {
    gap: var(--_1qis2nl2);
  }
  ._18cjd3s6u {
    gap: var(--_1qis2nl3);
  }
  ._18cjd3s6y {
    gap: var(--_1qis2nl4);
  }
  ._18cjd3s72 {
    gap: var(--_1qis2nl5);
  }
  ._18cjd3s76 {
    gap: var(--_1qis2nl6);
  }
  ._18cjd3s7a {
    gap: var(--_1qis2nl7);
  }
  ._18cjd3s7e {
    gap: var(--_1qis2nl8);
  }
  ._18cjd3s7i {
    gap: 0;
  }
  ._18cjd3s7m {
    padding-top: var(--_1qis2nl0);
  }
  ._18cjd3s7q {
    padding-top: var(--_1qis2nl1);
  }
  ._18cjd3s7u {
    padding-top: var(--_1qis2nl2);
  }
  ._18cjd3s7y {
    padding-top: var(--_1qis2nl3);
  }
  ._18cjd3s82 {
    padding-top: var(--_1qis2nl4);
  }
  ._18cjd3s86 {
    padding-top: var(--_1qis2nl5);
  }
  ._18cjd3s8a {
    padding-top: var(--_1qis2nl6);
  }
  ._18cjd3s8e {
    padding-top: var(--_1qis2nl7);
  }
  ._18cjd3s8i {
    padding-top: var(--_1qis2nl8);
  }
  ._18cjd3s8m {
    padding-top: 0;
  }
  ._18cjd3s8q {
    padding-bottom: var(--_1qis2nl0);
  }
  ._18cjd3s8u {
    padding-bottom: var(--_1qis2nl1);
  }
  ._18cjd3s8y {
    padding-bottom: var(--_1qis2nl2);
  }
  ._18cjd3s92 {
    padding-bottom: var(--_1qis2nl3);
  }
  ._18cjd3s96 {
    padding-bottom: var(--_1qis2nl4);
  }
  ._18cjd3s9a {
    padding-bottom: var(--_1qis2nl5);
  }
  ._18cjd3s9e {
    padding-bottom: var(--_1qis2nl6);
  }
  ._18cjd3s9i {
    padding-bottom: var(--_1qis2nl7);
  }
  ._18cjd3s9m {
    padding-bottom: var(--_1qis2nl8);
  }
  ._18cjd3s9q {
    padding-bottom: 0;
  }
  ._18cjd3s9u {
    padding-right: var(--_1qis2nl0);
  }
  ._18cjd3s9y {
    padding-right: var(--_1qis2nl1);
  }
  ._18cjd3sa2 {
    padding-right: var(--_1qis2nl2);
  }
  ._18cjd3sa6 {
    padding-right: var(--_1qis2nl3);
  }
  ._18cjd3saa {
    padding-right: var(--_1qis2nl4);
  }
  ._18cjd3sae {
    padding-right: var(--_1qis2nl5);
  }
  ._18cjd3sai {
    padding-right: var(--_1qis2nl6);
  }
  ._18cjd3sam {
    padding-right: var(--_1qis2nl7);
  }
  ._18cjd3saq {
    padding-right: var(--_1qis2nl8);
  }
  ._18cjd3sau {
    padding-right: 0;
  }
  ._18cjd3say {
    padding-left: var(--_1qis2nl0);
  }
  ._18cjd3sb2 {
    padding-left: var(--_1qis2nl1);
  }
  ._18cjd3sb6 {
    padding-left: var(--_1qis2nl2);
  }
  ._18cjd3sba {
    padding-left: var(--_1qis2nl3);
  }
  ._18cjd3sbe {
    padding-left: var(--_1qis2nl4);
  }
  ._18cjd3sbi {
    padding-left: var(--_1qis2nl5);
  }
  ._18cjd3sbm {
    padding-left: var(--_1qis2nl6);
  }
  ._18cjd3sbq {
    padding-left: var(--_1qis2nl7);
  }
  ._18cjd3sbu {
    padding-left: var(--_1qis2nl8);
  }
  ._18cjd3sby {
    padding-left: 0;
  }
  ._18cjd3sc2 {
    margin-top: var(--_1qis2nl0);
  }
  ._18cjd3sc6 {
    margin-top: var(--_1qis2nl1);
  }
  ._18cjd3sca {
    margin-top: var(--_1qis2nl2);
  }
  ._18cjd3sce {
    margin-top: var(--_1qis2nl3);
  }
  ._18cjd3sci {
    margin-top: var(--_1qis2nl4);
  }
  ._18cjd3scm {
    margin-top: var(--_1qis2nl5);
  }
  ._18cjd3scq {
    margin-top: var(--_1qis2nl6);
  }
  ._18cjd3scu {
    margin-top: var(--_1qis2nl7);
  }
  ._18cjd3scy {
    margin-top: var(--_1qis2nl8);
  }
  ._18cjd3sd2 {
    margin-top: 0;
  }
  ._18cjd3sd6 {
    margin-bottom: var(--_1qis2nl0);
  }
  ._18cjd3sda {
    margin-bottom: var(--_1qis2nl1);
  }
  ._18cjd3sde {
    margin-bottom: var(--_1qis2nl2);
  }
  ._18cjd3sdi {
    margin-bottom: var(--_1qis2nl3);
  }
  ._18cjd3sdm {
    margin-bottom: var(--_1qis2nl4);
  }
  ._18cjd3sdq {
    margin-bottom: var(--_1qis2nl5);
  }
  ._18cjd3sdu {
    margin-bottom: var(--_1qis2nl6);
  }
  ._18cjd3sdy {
    margin-bottom: var(--_1qis2nl7);
  }
  ._18cjd3se2 {
    margin-bottom: var(--_1qis2nl8);
  }
  ._18cjd3se6 {
    margin-bottom: 0;
  }
  ._18cjd3sea {
    margin-right: var(--_1qis2nl0);
  }
  ._18cjd3see {
    margin-right: var(--_1qis2nl1);
  }
  ._18cjd3sei {
    margin-right: var(--_1qis2nl2);
  }
  ._18cjd3sem {
    margin-right: var(--_1qis2nl3);
  }
  ._18cjd3seq {
    margin-right: var(--_1qis2nl4);
  }
  ._18cjd3seu {
    margin-right: var(--_1qis2nl5);
  }
  ._18cjd3sey {
    margin-right: var(--_1qis2nl6);
  }
  ._18cjd3sf2 {
    margin-right: var(--_1qis2nl7);
  }
  ._18cjd3sf6 {
    margin-right: var(--_1qis2nl8);
  }
  ._18cjd3sfa {
    margin-right: 0;
  }
  ._18cjd3sfe {
    margin-left: var(--_1qis2nl0);
  }
  ._18cjd3sfi {
    margin-left: var(--_1qis2nl1);
  }
  ._18cjd3sfm {
    margin-left: var(--_1qis2nl2);
  }
  ._18cjd3sfq {
    margin-left: var(--_1qis2nl3);
  }
  ._18cjd3sfu {
    margin-left: var(--_1qis2nl4);
  }
  ._18cjd3sfy {
    margin-left: var(--_1qis2nl5);
  }
  ._18cjd3sg2 {
    margin-left: var(--_1qis2nl6);
  }
  ._18cjd3sg6 {
    margin-left: var(--_1qis2nl7);
  }
  ._18cjd3sga {
    margin-left: var(--_1qis2nl8);
  }
  ._18cjd3sge {
    margin-left: 0;
  }
  ._18cjd3sgi {
    align-items: flex-start;
  }
  ._18cjd3sgm {
    align-items: center;
  }
  ._18cjd3sgq {
    align-items: flex-end;
  }
  ._18cjd3sgu {
    justify-content: flex-start;
  }
  ._18cjd3sgy {
    justify-content: center;
  }
  ._18cjd3sh2 {
    justify-content: flex-end;
  }
  ._18cjd3sh6 {
    justify-content: space-between;
  }
  ._18cjd3sha {
    flex-direction: row;
  }
  ._18cjd3she {
    flex-direction: row-reverse;
  }
  ._18cjd3shi {
    flex-direction: column;
  }
  ._18cjd3shm {
    flex-direction: column-reverse;
  }
  ._18cjd3shq {
    flex-wrap: wrap;
  }
  ._18cjd3shu {
    flex-wrap: nowrap;
  }
  ._18cjd3shy {
    flex-shrink: 0;
  }
  ._18cjd3si2 {
    flex-grow: 0;
  }
  ._18cjd3si6 {
    flex-grow: 1;
  }
  ._18cjd3sia {
    text-align: left;
  }
  ._18cjd3sie {
    text-align: center;
  }
  ._18cjd3sii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._18cjd3s4v {
    display: none;
  }
  ._18cjd3s4z {
    display: block;
  }
  ._18cjd3s53 {
    display: inline;
  }
  ._18cjd3s57 {
    display: inline-block;
  }
  ._18cjd3s5b {
    display: flex;
  }
  ._18cjd3s5f {
    position: relative;
  }
  ._18cjd3s5j {
    position: absolute;
  }
  ._18cjd3s5n {
    position: fixed;
  }
  ._18cjd3s5r {
    position: sticky;
  }
  ._18cjd3s5v {
    border-radius: 0;
  }
  ._18cjd3s5z {
    border-radius: 9999px;
  }
  ._18cjd3s63 {
    border-radius: var(--_1qis2nlb);
  }
  ._18cjd3s67 {
    border-radius: var(--_1qis2nlc);
  }
  ._18cjd3s6b {
    border-radius: var(--_1qis2nld);
  }
  ._18cjd3s6f {
    border-radius: var(--_1qis2nle);
  }
  ._18cjd3s6j {
    gap: var(--_1qis2nl0);
  }
  ._18cjd3s6n {
    gap: var(--_1qis2nl1);
  }
  ._18cjd3s6r {
    gap: var(--_1qis2nl2);
  }
  ._18cjd3s6v {
    gap: var(--_1qis2nl3);
  }
  ._18cjd3s6z {
    gap: var(--_1qis2nl4);
  }
  ._18cjd3s73 {
    gap: var(--_1qis2nl5);
  }
  ._18cjd3s77 {
    gap: var(--_1qis2nl6);
  }
  ._18cjd3s7b {
    gap: var(--_1qis2nl7);
  }
  ._18cjd3s7f {
    gap: var(--_1qis2nl8);
  }
  ._18cjd3s7j {
    gap: 0;
  }
  ._18cjd3s7n {
    padding-top: var(--_1qis2nl0);
  }
  ._18cjd3s7r {
    padding-top: var(--_1qis2nl1);
  }
  ._18cjd3s7v {
    padding-top: var(--_1qis2nl2);
  }
  ._18cjd3s7z {
    padding-top: var(--_1qis2nl3);
  }
  ._18cjd3s83 {
    padding-top: var(--_1qis2nl4);
  }
  ._18cjd3s87 {
    padding-top: var(--_1qis2nl5);
  }
  ._18cjd3s8b {
    padding-top: var(--_1qis2nl6);
  }
  ._18cjd3s8f {
    padding-top: var(--_1qis2nl7);
  }
  ._18cjd3s8j {
    padding-top: var(--_1qis2nl8);
  }
  ._18cjd3s8n {
    padding-top: 0;
  }
  ._18cjd3s8r {
    padding-bottom: var(--_1qis2nl0);
  }
  ._18cjd3s8v {
    padding-bottom: var(--_1qis2nl1);
  }
  ._18cjd3s8z {
    padding-bottom: var(--_1qis2nl2);
  }
  ._18cjd3s93 {
    padding-bottom: var(--_1qis2nl3);
  }
  ._18cjd3s97 {
    padding-bottom: var(--_1qis2nl4);
  }
  ._18cjd3s9b {
    padding-bottom: var(--_1qis2nl5);
  }
  ._18cjd3s9f {
    padding-bottom: var(--_1qis2nl6);
  }
  ._18cjd3s9j {
    padding-bottom: var(--_1qis2nl7);
  }
  ._18cjd3s9n {
    padding-bottom: var(--_1qis2nl8);
  }
  ._18cjd3s9r {
    padding-bottom: 0;
  }
  ._18cjd3s9v {
    padding-right: var(--_1qis2nl0);
  }
  ._18cjd3s9z {
    padding-right: var(--_1qis2nl1);
  }
  ._18cjd3sa3 {
    padding-right: var(--_1qis2nl2);
  }
  ._18cjd3sa7 {
    padding-right: var(--_1qis2nl3);
  }
  ._18cjd3sab {
    padding-right: var(--_1qis2nl4);
  }
  ._18cjd3saf {
    padding-right: var(--_1qis2nl5);
  }
  ._18cjd3saj {
    padding-right: var(--_1qis2nl6);
  }
  ._18cjd3san {
    padding-right: var(--_1qis2nl7);
  }
  ._18cjd3sar {
    padding-right: var(--_1qis2nl8);
  }
  ._18cjd3sav {
    padding-right: 0;
  }
  ._18cjd3saz {
    padding-left: var(--_1qis2nl0);
  }
  ._18cjd3sb3 {
    padding-left: var(--_1qis2nl1);
  }
  ._18cjd3sb7 {
    padding-left: var(--_1qis2nl2);
  }
  ._18cjd3sbb {
    padding-left: var(--_1qis2nl3);
  }
  ._18cjd3sbf {
    padding-left: var(--_1qis2nl4);
  }
  ._18cjd3sbj {
    padding-left: var(--_1qis2nl5);
  }
  ._18cjd3sbn {
    padding-left: var(--_1qis2nl6);
  }
  ._18cjd3sbr {
    padding-left: var(--_1qis2nl7);
  }
  ._18cjd3sbv {
    padding-left: var(--_1qis2nl8);
  }
  ._18cjd3sbz {
    padding-left: 0;
  }
  ._18cjd3sc3 {
    margin-top: var(--_1qis2nl0);
  }
  ._18cjd3sc7 {
    margin-top: var(--_1qis2nl1);
  }
  ._18cjd3scb {
    margin-top: var(--_1qis2nl2);
  }
  ._18cjd3scf {
    margin-top: var(--_1qis2nl3);
  }
  ._18cjd3scj {
    margin-top: var(--_1qis2nl4);
  }
  ._18cjd3scn {
    margin-top: var(--_1qis2nl5);
  }
  ._18cjd3scr {
    margin-top: var(--_1qis2nl6);
  }
  ._18cjd3scv {
    margin-top: var(--_1qis2nl7);
  }
  ._18cjd3scz {
    margin-top: var(--_1qis2nl8);
  }
  ._18cjd3sd3 {
    margin-top: 0;
  }
  ._18cjd3sd7 {
    margin-bottom: var(--_1qis2nl0);
  }
  ._18cjd3sdb {
    margin-bottom: var(--_1qis2nl1);
  }
  ._18cjd3sdf {
    margin-bottom: var(--_1qis2nl2);
  }
  ._18cjd3sdj {
    margin-bottom: var(--_1qis2nl3);
  }
  ._18cjd3sdn {
    margin-bottom: var(--_1qis2nl4);
  }
  ._18cjd3sdr {
    margin-bottom: var(--_1qis2nl5);
  }
  ._18cjd3sdv {
    margin-bottom: var(--_1qis2nl6);
  }
  ._18cjd3sdz {
    margin-bottom: var(--_1qis2nl7);
  }
  ._18cjd3se3 {
    margin-bottom: var(--_1qis2nl8);
  }
  ._18cjd3se7 {
    margin-bottom: 0;
  }
  ._18cjd3seb {
    margin-right: var(--_1qis2nl0);
  }
  ._18cjd3sef {
    margin-right: var(--_1qis2nl1);
  }
  ._18cjd3sej {
    margin-right: var(--_1qis2nl2);
  }
  ._18cjd3sen {
    margin-right: var(--_1qis2nl3);
  }
  ._18cjd3ser {
    margin-right: var(--_1qis2nl4);
  }
  ._18cjd3sev {
    margin-right: var(--_1qis2nl5);
  }
  ._18cjd3sez {
    margin-right: var(--_1qis2nl6);
  }
  ._18cjd3sf3 {
    margin-right: var(--_1qis2nl7);
  }
  ._18cjd3sf7 {
    margin-right: var(--_1qis2nl8);
  }
  ._18cjd3sfb {
    margin-right: 0;
  }
  ._18cjd3sff {
    margin-left: var(--_1qis2nl0);
  }
  ._18cjd3sfj {
    margin-left: var(--_1qis2nl1);
  }
  ._18cjd3sfn {
    margin-left: var(--_1qis2nl2);
  }
  ._18cjd3sfr {
    margin-left: var(--_1qis2nl3);
  }
  ._18cjd3sfv {
    margin-left: var(--_1qis2nl4);
  }
  ._18cjd3sfz {
    margin-left: var(--_1qis2nl5);
  }
  ._18cjd3sg3 {
    margin-left: var(--_1qis2nl6);
  }
  ._18cjd3sg7 {
    margin-left: var(--_1qis2nl7);
  }
  ._18cjd3sgb {
    margin-left: var(--_1qis2nl8);
  }
  ._18cjd3sgf {
    margin-left: 0;
  }
  ._18cjd3sgj {
    align-items: flex-start;
  }
  ._18cjd3sgn {
    align-items: center;
  }
  ._18cjd3sgr {
    align-items: flex-end;
  }
  ._18cjd3sgv {
    justify-content: flex-start;
  }
  ._18cjd3sgz {
    justify-content: center;
  }
  ._18cjd3sh3 {
    justify-content: flex-end;
  }
  ._18cjd3sh7 {
    justify-content: space-between;
  }
  ._18cjd3shb {
    flex-direction: row;
  }
  ._18cjd3shf {
    flex-direction: row-reverse;
  }
  ._18cjd3shj {
    flex-direction: column;
  }
  ._18cjd3shn {
    flex-direction: column-reverse;
  }
  ._18cjd3shr {
    flex-wrap: wrap;
  }
  ._18cjd3shv {
    flex-wrap: nowrap;
  }
  ._18cjd3shz {
    flex-shrink: 0;
  }
  ._18cjd3si3 {
    flex-grow: 0;
  }
  ._18cjd3si7 {
    flex-grow: 1;
  }
  ._18cjd3sib {
    text-align: left;
  }
  ._18cjd3sif {
    text-align: center;
  }
  ._18cjd3sij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._18cjd3s4w {
    display: none;
  }
  ._18cjd3s50 {
    display: block;
  }
  ._18cjd3s54 {
    display: inline;
  }
  ._18cjd3s58 {
    display: inline-block;
  }
  ._18cjd3s5c {
    display: flex;
  }
  ._18cjd3s5g {
    position: relative;
  }
  ._18cjd3s5k {
    position: absolute;
  }
  ._18cjd3s5o {
    position: fixed;
  }
  ._18cjd3s5s {
    position: sticky;
  }
  ._18cjd3s5w {
    border-radius: 0;
  }
  ._18cjd3s60 {
    border-radius: 9999px;
  }
  ._18cjd3s64 {
    border-radius: var(--_1qis2nlb);
  }
  ._18cjd3s68 {
    border-radius: var(--_1qis2nlc);
  }
  ._18cjd3s6c {
    border-radius: var(--_1qis2nld);
  }
  ._18cjd3s6g {
    border-radius: var(--_1qis2nle);
  }
  ._18cjd3s6k {
    gap: var(--_1qis2nl0);
  }
  ._18cjd3s6o {
    gap: var(--_1qis2nl1);
  }
  ._18cjd3s6s {
    gap: var(--_1qis2nl2);
  }
  ._18cjd3s6w {
    gap: var(--_1qis2nl3);
  }
  ._18cjd3s70 {
    gap: var(--_1qis2nl4);
  }
  ._18cjd3s74 {
    gap: var(--_1qis2nl5);
  }
  ._18cjd3s78 {
    gap: var(--_1qis2nl6);
  }
  ._18cjd3s7c {
    gap: var(--_1qis2nl7);
  }
  ._18cjd3s7g {
    gap: var(--_1qis2nl8);
  }
  ._18cjd3s7k {
    gap: 0;
  }
  ._18cjd3s7o {
    padding-top: var(--_1qis2nl0);
  }
  ._18cjd3s7s {
    padding-top: var(--_1qis2nl1);
  }
  ._18cjd3s7w {
    padding-top: var(--_1qis2nl2);
  }
  ._18cjd3s80 {
    padding-top: var(--_1qis2nl3);
  }
  ._18cjd3s84 {
    padding-top: var(--_1qis2nl4);
  }
  ._18cjd3s88 {
    padding-top: var(--_1qis2nl5);
  }
  ._18cjd3s8c {
    padding-top: var(--_1qis2nl6);
  }
  ._18cjd3s8g {
    padding-top: var(--_1qis2nl7);
  }
  ._18cjd3s8k {
    padding-top: var(--_1qis2nl8);
  }
  ._18cjd3s8o {
    padding-top: 0;
  }
  ._18cjd3s8s {
    padding-bottom: var(--_1qis2nl0);
  }
  ._18cjd3s8w {
    padding-bottom: var(--_1qis2nl1);
  }
  ._18cjd3s90 {
    padding-bottom: var(--_1qis2nl2);
  }
  ._18cjd3s94 {
    padding-bottom: var(--_1qis2nl3);
  }
  ._18cjd3s98 {
    padding-bottom: var(--_1qis2nl4);
  }
  ._18cjd3s9c {
    padding-bottom: var(--_1qis2nl5);
  }
  ._18cjd3s9g {
    padding-bottom: var(--_1qis2nl6);
  }
  ._18cjd3s9k {
    padding-bottom: var(--_1qis2nl7);
  }
  ._18cjd3s9o {
    padding-bottom: var(--_1qis2nl8);
  }
  ._18cjd3s9s {
    padding-bottom: 0;
  }
  ._18cjd3s9w {
    padding-right: var(--_1qis2nl0);
  }
  ._18cjd3sa0 {
    padding-right: var(--_1qis2nl1);
  }
  ._18cjd3sa4 {
    padding-right: var(--_1qis2nl2);
  }
  ._18cjd3sa8 {
    padding-right: var(--_1qis2nl3);
  }
  ._18cjd3sac {
    padding-right: var(--_1qis2nl4);
  }
  ._18cjd3sag {
    padding-right: var(--_1qis2nl5);
  }
  ._18cjd3sak {
    padding-right: var(--_1qis2nl6);
  }
  ._18cjd3sao {
    padding-right: var(--_1qis2nl7);
  }
  ._18cjd3sas {
    padding-right: var(--_1qis2nl8);
  }
  ._18cjd3saw {
    padding-right: 0;
  }
  ._18cjd3sb0 {
    padding-left: var(--_1qis2nl0);
  }
  ._18cjd3sb4 {
    padding-left: var(--_1qis2nl1);
  }
  ._18cjd3sb8 {
    padding-left: var(--_1qis2nl2);
  }
  ._18cjd3sbc {
    padding-left: var(--_1qis2nl3);
  }
  ._18cjd3sbg {
    padding-left: var(--_1qis2nl4);
  }
  ._18cjd3sbk {
    padding-left: var(--_1qis2nl5);
  }
  ._18cjd3sbo {
    padding-left: var(--_1qis2nl6);
  }
  ._18cjd3sbs {
    padding-left: var(--_1qis2nl7);
  }
  ._18cjd3sbw {
    padding-left: var(--_1qis2nl8);
  }
  ._18cjd3sc0 {
    padding-left: 0;
  }
  ._18cjd3sc4 {
    margin-top: var(--_1qis2nl0);
  }
  ._18cjd3sc8 {
    margin-top: var(--_1qis2nl1);
  }
  ._18cjd3scc {
    margin-top: var(--_1qis2nl2);
  }
  ._18cjd3scg {
    margin-top: var(--_1qis2nl3);
  }
  ._18cjd3sck {
    margin-top: var(--_1qis2nl4);
  }
  ._18cjd3sco {
    margin-top: var(--_1qis2nl5);
  }
  ._18cjd3scs {
    margin-top: var(--_1qis2nl6);
  }
  ._18cjd3scw {
    margin-top: var(--_1qis2nl7);
  }
  ._18cjd3sd0 {
    margin-top: var(--_1qis2nl8);
  }
  ._18cjd3sd4 {
    margin-top: 0;
  }
  ._18cjd3sd8 {
    margin-bottom: var(--_1qis2nl0);
  }
  ._18cjd3sdc {
    margin-bottom: var(--_1qis2nl1);
  }
  ._18cjd3sdg {
    margin-bottom: var(--_1qis2nl2);
  }
  ._18cjd3sdk {
    margin-bottom: var(--_1qis2nl3);
  }
  ._18cjd3sdo {
    margin-bottom: var(--_1qis2nl4);
  }
  ._18cjd3sds {
    margin-bottom: var(--_1qis2nl5);
  }
  ._18cjd3sdw {
    margin-bottom: var(--_1qis2nl6);
  }
  ._18cjd3se0 {
    margin-bottom: var(--_1qis2nl7);
  }
  ._18cjd3se4 {
    margin-bottom: var(--_1qis2nl8);
  }
  ._18cjd3se8 {
    margin-bottom: 0;
  }
  ._18cjd3sec {
    margin-right: var(--_1qis2nl0);
  }
  ._18cjd3seg {
    margin-right: var(--_1qis2nl1);
  }
  ._18cjd3sek {
    margin-right: var(--_1qis2nl2);
  }
  ._18cjd3seo {
    margin-right: var(--_1qis2nl3);
  }
  ._18cjd3ses {
    margin-right: var(--_1qis2nl4);
  }
  ._18cjd3sew {
    margin-right: var(--_1qis2nl5);
  }
  ._18cjd3sf0 {
    margin-right: var(--_1qis2nl6);
  }
  ._18cjd3sf4 {
    margin-right: var(--_1qis2nl7);
  }
  ._18cjd3sf8 {
    margin-right: var(--_1qis2nl8);
  }
  ._18cjd3sfc {
    margin-right: 0;
  }
  ._18cjd3sfg {
    margin-left: var(--_1qis2nl0);
  }
  ._18cjd3sfk {
    margin-left: var(--_1qis2nl1);
  }
  ._18cjd3sfo {
    margin-left: var(--_1qis2nl2);
  }
  ._18cjd3sfs {
    margin-left: var(--_1qis2nl3);
  }
  ._18cjd3sfw {
    margin-left: var(--_1qis2nl4);
  }
  ._18cjd3sg0 {
    margin-left: var(--_1qis2nl5);
  }
  ._18cjd3sg4 {
    margin-left: var(--_1qis2nl6);
  }
  ._18cjd3sg8 {
    margin-left: var(--_1qis2nl7);
  }
  ._18cjd3sgc {
    margin-left: var(--_1qis2nl8);
  }
  ._18cjd3sgg {
    margin-left: 0;
  }
  ._18cjd3sgk {
    align-items: flex-start;
  }
  ._18cjd3sgo {
    align-items: center;
  }
  ._18cjd3sgs {
    align-items: flex-end;
  }
  ._18cjd3sgw {
    justify-content: flex-start;
  }
  ._18cjd3sh0 {
    justify-content: center;
  }
  ._18cjd3sh4 {
    justify-content: flex-end;
  }
  ._18cjd3sh8 {
    justify-content: space-between;
  }
  ._18cjd3shc {
    flex-direction: row;
  }
  ._18cjd3shg {
    flex-direction: row-reverse;
  }
  ._18cjd3shk {
    flex-direction: column;
  }
  ._18cjd3sho {
    flex-direction: column-reverse;
  }
  ._18cjd3shs {
    flex-wrap: wrap;
  }
  ._18cjd3shw {
    flex-wrap: nowrap;
  }
  ._18cjd3si0 {
    flex-shrink: 0;
  }
  ._18cjd3si4 {
    flex-grow: 0;
  }
  ._18cjd3si8 {
    flex-grow: 1;
  }
  ._18cjd3sic {
    text-align: left;
  }
  ._18cjd3sig {
    text-align: center;
  }
  ._18cjd3sik {
    text-align: right;
  }
}
._1c69nho0 {
  --_1qis2nl0: 24px;
  --_1qis2nl1: 8px;
  --_1qis2nl2: 12px;
  --_1qis2nl3: 16px;
  --_1qis2nl4: 24px;
  --_1qis2nl5: 32px;
  --_1qis2nl6: 48px;
  --_1qis2nl7: 64px;
  --_1qis2nl8: 96px;
  --_1qis2nl9: 48px;
  --_1qis2nla: 4px;
  --_1qis2nlb: 4px;
  --_1qis2nlc: 8px;
  --_1qis2nld: 16px;
  --_1qis2nle: 24px;
  --_1qis2nlf: #e60278;
  --_1qis2nlg: #f8b1dc;
  --_1qis2nlh: #fdc221;
  --_1qis2nli: #fee384;
  --_1qis2nlj: #b91e1e;
  --_1qis2nlk: #fb999a;
  --_1qis2nll: #838fa5;
  --_1qis2nlm: rgba(153, 191, 247, 0.7);
  --_1qis2nln: #1e47a9;
  --_1qis2nlo: #99bff7;
  --_1qis2nlp: #1d559d;
  --_1qis2nlq: #98c9f1;
  --_1qis2nlr: #2e3849;
  --_1qis2nlt: #eaecf1;
  --_1qis2nls: #fff;
  --_1qis2nlu: #12784f;
  --_1qis2nlv: #8bdec5;
  --_1qis2nlw: #7f35a9;
  --_1qis2nlx: #e1b2f5;
  --_1qis2nly: 2px;
  --_1qis2nlz: 4px;
  --_1qis2nl10: 6px;
  --_1qis2nl11: 400px;
  --_1qis2nl12: 660px;
  --_1qis2nl13: 940px;
  --_1qis2nl14: 1280px;
  --_1qis2nl15: #e60278;
  --_1qis2nl16: #f8b1dc;
  --_1qis2nl17: #723d02;
  --_1qis2nl18: #fee384;
  --_1qis2nl19: #b91e1e;
  --_1qis2nl1a: #fb999a;
  --_1qis2nl1b: #1e47a9;
  --_1qis2nl1c: #99bff7;
  --_1qis2nl1d: #1d559d;
  --_1qis2nl1e: #98c9f1;
  --_1qis2nl1f: #2e3849;
  --_1qis2nl1h: #fff;
  --_1qis2nl1g: #2e3849;
  --_1qis2nl1i: #5b2084;
  --_1qis2nl1j: #f0d6fa;
  --_1qis2nl1k: #2e3849;
  --_1qis2nl1l: #fff;
  --_1qis2nl1m: #12784f;
  --_1qis2nl1n: #8bdec5;
  --_1qis2nl1o: #7f35a9;
  --_1qis2nl1p: #e1b2f5;
  --_1qis2nl1q: #5a6881;
  --_1qis2nl1r: hsla(0, 0%, 100%, 0.65);
  --_1qis2nl1s: #fff;
  --_1qis2nl1t: #1c2330;
  --_1qis2nl1u: #051a49;
  --_1qis2nl1v: #e60278;
  --_1qis2nl1w: #cd026b;
  --_1qis2nl1x: #fd0585;
  --_1qis2nl1y: #feeffa;
  --_1qis2nl1z: #fdd7f3;
  --_1qis2nl20: #fde3f6;
  --_1qis2nl21: #fdc221;
  --_1qis2nl22: #fef8de;
  --_1qis2nl23: #b91e1e;
  --_1qis2nl24: #a31a1a;
  --_1qis2nl25: #db1616;
  --_1qis2nl26: #ffe3e2;
  --_1qis2nl27: #fef3f3;
  --_1qis2nl28: #fcdbdb;
  --_1qis2nl29: #fde7e7;
  --_1qis2nl2a: #1e47a9;
  --_1qis2nl2b: #1a3e93;
  --_1qis2nl2c: #2455c9;
  --_1qis2nl2d: #f0f7fe;
  --_1qis2nl2e: #d8eafc;
  --_1qis2nl2f: #e4f1fd;
  --_1qis2nl2g: #1d559d;
  --_1qis2nl2h: #e3f2fb;
  --_1qis2nl2i: #2e3849;
  --_1qis2nl2j: #242c39;
  --_1qis2nl2k: #384459;
  --_1qis2nl2l: #f3f5f7;
  --_1qis2nl2m: #f3f5f7;
  --_1qis2nl2n: #e4e8ed;
  --_1qis2nl2o: #ebeff2;
  --_1qis2nl2p: #12784f;
  --_1qis2nl2q: #e2f7f1;
  --_1qis2nl2r: #7f35a9;
  --_1qis2nl2s: #f9ebfd;
  --_1qis2nl2t: #fff;
  --_1qis2nl2u: #1c2330;
  --_1qis2nl2v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1qis2nl2w: 783;
  --_1qis2nl2x: 1057;
  --_1qis2nl2y: -274;
  --_1qis2nl2z: 0;
  --_1qis2nl30: 1000;
  --_1qis2nl3v: 18px;
  --_1qis2nl3w: 27.094px;
  --_1qis2nl3x: 14.094px;
  --_1qis2nl3y: -0.3611em;
  --_1qis2nl3z: -0.3611em;
  --_1qis2nl40: 18px;
  --_1qis2nl41: 27.094px;
  --_1qis2nl42: 14.094px;
  --_1qis2nl43: -0.3611em;
  --_1qis2nl44: -0.3611em;
  --_1qis2nl3l: 16px;
  --_1qis2nl3m: 24.528px;
  --_1qis2nl3n: 12.528px;
  --_1qis2nl3o: -0.375em;
  --_1qis2nl3p: -0.375em;
  --_1qis2nl3q: 16px;
  --_1qis2nl3r: 24.528px;
  --_1qis2nl3s: 12.528px;
  --_1qis2nl3t: -0.375em;
  --_1qis2nl3u: -0.375em;
  --_1qis2nl3b: 14px;
  --_1qis2nl3c: 20.962px;
  --_1qis2nl3d: 10.962px;
  --_1qis2nl3e: -0.3571em;
  --_1qis2nl3f: -0.3571em;
  --_1qis2nl3g: 14px;
  --_1qis2nl3h: 20.962px;
  --_1qis2nl3i: 10.962px;
  --_1qis2nl3j: -0.3571em;
  --_1qis2nl3k: -0.3571em;
  --_1qis2nl31: 12px;
  --_1qis2nl32: 18.396px;
  --_1qis2nl33: 9.396px;
  --_1qis2nl34: -0.375em;
  --_1qis2nl35: -0.375em;
  --_1qis2nl36: 12px;
  --_1qis2nl37: 18.396px;
  --_1qis2nl38: 9.396px;
  --_1qis2nl39: -0.375em;
  --_1qis2nl3a: -0.375em;
  --_1qis2nl45: 400;
  --_1qis2nl46: 600;
  --_1qis2nl47: 700;
  --_1qis2nl48: 28px;
  --_1qis2nl49: 32.924px;
  --_1qis2nl4a: 21.924px;
  --_1qis2nl4b: -0.1964em;
  --_1qis2nl4c: -0.1964em;
  --_1qis2nl4d: 36px;
  --_1qis2nl4e: 42.188px;
  --_1qis2nl4f: 28.188px;
  --_1qis2nl4g: -0.1944em;
  --_1qis2nl4h: -0.1944em;
  --_1qis2nl4i: 24px;
  --_1qis2nl4j: 29.792px;
  --_1qis2nl4k: 18.792px;
  --_1qis2nl4l: -0.2292em;
  --_1qis2nl4m: -0.2292em;
  --_1qis2nl4n: 30px;
  --_1qis2nl4o: 36.49px;
  --_1qis2nl4p: 23.49px;
  --_1qis2nl4q: -0.2167em;
  --_1qis2nl4r: -0.2167em;
  --_1qis2nl4s: 22px;
  --_1qis2nl4t: 27.226px;
  --_1qis2nl4u: 17.226px;
  --_1qis2nl4v: -0.2273em;
  --_1qis2nl4w: -0.2273em;
  --_1qis2nl4x: 24px;
  --_1qis2nl4y: 29.792px;
  --_1qis2nl4z: 18.792px;
  --_1qis2nl50: -0.2292em;
  --_1qis2nl51: -0.2292em;
  --_1qis2nl52: 20px;
  --_1qis2nl53: 24.66px;
  --_1qis2nl54: 15.66px;
  --_1qis2nl55: -0.225em;
  --_1qis2nl56: -0.225em;
  --_1qis2nl57: 20px;
  --_1qis2nl58: 24.66px;
  --_1qis2nl59: 15.66px;
  --_1qis2nl5a: -0.225em;
  --_1qis2nl5b: -0.225em;
  --_1qis2nl5c: 400;
  --_1qis2nl5d: 600;
  --_1qis2nl5e: underline;
  --_1qis2nl5f: 24px;
  --_1qis2nl5g: 20px;
  --_1qis2nl5h: transform 0.125s ease, opacity 0.125s ease;
  --_1qis2nl5i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1qis2nl5j: scale(0.95);
  --_1qis2nl5k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1qis2nl5l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1qis2nl5m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1xascs94 {
  font-size: var(--_1xascs90);
  line-height: var(--_1xascs91);
}
._1xascs94:before {
  content: "";
  display: table;
  margin-bottom: var(--_1xascs92);
}
._1xascs94:after {
  content: "";
  display: table;
  margin-top: var(--_1xascs93);
}
._10ruptc0 {
  font-family: var(--_1qis2nl2v);
}
._10ruptc1 {
  font-weight: var(--_1qis2nl45);
}
._10ruptc2 {
  font-weight: var(--_1qis2nl46);
}
._10ruptc3 {
  font-weight: var(--_1qis2nl47);
}
._10ruptc4 {
  --_1xascs90: var(--_1qis2nl31);
  --_1xascs91: var(--_1qis2nl32);
  --_1xascs92: var(--_1qis2nl34);
  --_1xascs93: var(--_1qis2nl35);
}
._10ruptc6 {
  --_1xascs90: var(--_1qis2nl3b);
  --_1xascs91: var(--_1qis2nl3c);
  --_1xascs92: var(--_1qis2nl3e);
  --_1xascs93: var(--_1qis2nl3f);
}
._10ruptc8 {
  --_1xascs90: var(--_1qis2nl3l);
  --_1xascs91: var(--_1qis2nl3m);
  --_1xascs92: var(--_1qis2nl3o);
  --_1xascs93: var(--_1qis2nl3p);
}
._10ruptca {
  --_1xascs90: var(--_1qis2nl3v);
  --_1xascs91: var(--_1qis2nl3w);
  --_1xascs92: var(--_1qis2nl3y);
  --_1xascs93: var(--_1qis2nl3z);
}
._10ruptcc {
  font-size: var(--_1qis2nl31);
  line-height: var(--_1qis2nl32);
}
._10ruptcd {
  font-size: var(--_1qis2nl3b);
  line-height: var(--_1qis2nl3c);
}
._10ruptce {
  font-size: var(--_1qis2nl3l);
  line-height: var(--_1qis2nl3m);
}
._10ruptcf {
  font-size: var(--_1qis2nl3v);
  line-height: var(--_1qis2nl3w);
}
._10ruptcg {
  font-weight: var(--_1qis2nl5c);
}
._10ruptch {
  font-weight: var(--_1qis2nl5d);
}
._10ruptci {
  --_1xascs90: var(--_1qis2nl48);
  --_1xascs91: var(--_1qis2nl49);
  --_1xascs92: var(--_1qis2nl4b);
  --_1xascs93: var(--_1qis2nl4c);
}
._10ruptck {
  --_1xascs90: var(--_1qis2nl4i);
  --_1xascs91: var(--_1qis2nl4j);
  --_1xascs92: var(--_1qis2nl4l);
  --_1xascs93: var(--_1qis2nl4m);
}
._10ruptcm {
  --_1xascs90: var(--_1qis2nl4s);
  --_1xascs91: var(--_1qis2nl4t);
  --_1xascs92: var(--_1qis2nl4v);
  --_1xascs93: var(--_1qis2nl4w);
}
._10ruptco {
  --_1xascs90: var(--_1qis2nl52);
  --_1xascs91: var(--_1qis2nl53);
  --_1xascs92: var(--_1qis2nl55);
  --_1xascs93: var(--_1qis2nl56);
}
html:not(._18cjd3s10) ._10ruptc10 {
  --_10ruptcq: var(--_1qis2nl19);
  --_10ruptcr: var(--_1qis2nl17);
  --_10ruptcs: var(--_1qis2nl1d);
  --_10ruptct: var(--_1qis2nl1o);
  --_10ruptcu: var(--_1qis2nl1m);
  --_10ruptcv: var(--_1qis2nl15);
  --_10ruptcw: var(--_1qis2nl1b);
  --_10ruptcx: var(--_1qis2nl1k);
  --_10ruptcy: var(--_1qis2nl1q);
  --_10ruptcz: var(--_1qis2nl1f);
}
html:not(._18cjd3s10) ._10ruptc11 {
  --_10ruptcq: var(--_1qis2nl1a);
  --_10ruptcr: var(--_1qis2nl18);
  --_10ruptcs: var(--_1qis2nl1e);
  --_10ruptct: var(--_1qis2nl1p);
  --_10ruptcu: var(--_1qis2nl1n);
  --_10ruptcv: var(--_1qis2nl16);
  --_10ruptcw: var(--_1qis2nl1c);
  --_10ruptcx: var(--_1qis2nl1l);
  --_10ruptcy: var(--_1qis2nl1r);
  --_10ruptcz: var(--_1qis2nl1h);
}
html._18cjd3s10 ._10ruptc12 {
  --_10ruptcq: var(--_1qis2nl19);
  --_10ruptcr: var(--_1qis2nl17);
  --_10ruptcs: var(--_1qis2nl1d);
  --_10ruptct: var(--_1qis2nl1o);
  --_10ruptcu: var(--_1qis2nl1m);
  --_10ruptcv: var(--_1qis2nl15);
  --_10ruptcw: var(--_1qis2nl1b);
  --_10ruptcx: var(--_1qis2nl1k);
  --_10ruptcy: var(--_1qis2nl1q);
  --_10ruptcz: var(--_1qis2nl1f);
}
html._18cjd3s10 ._10ruptc13 {
  --_10ruptcq: var(--_1qis2nl1a);
  --_10ruptcr: var(--_1qis2nl18);
  --_10ruptcs: var(--_1qis2nl1e);
  --_10ruptct: var(--_1qis2nl1p);
  --_10ruptcu: var(--_1qis2nl1n);
  --_10ruptcv: var(--_1qis2nl16);
  --_10ruptcw: var(--_1qis2nl1c);
  --_10ruptcx: var(--_1qis2nl1l);
  --_10ruptcy: var(--_1qis2nl1r);
  --_10ruptcz: var(--_1qis2nl1h);
}
html:not(._18cjd3s10) ._10ruptc14,
html:not(._18cjd3s10) ._10ruptc15,
html:not(._18cjd3s10) ._10ruptc16,
html:not(._18cjd3s10) ._10ruptc17 {
  --_10ruptcx: var(--_10ruptcq);
}
html:not(._18cjd3s10) ._10ruptc18,
html:not(._18cjd3s10) ._10ruptc19 {
  --_10ruptcx: var(--_10ruptcr);
}
html:not(._18cjd3s10) ._10ruptc1a {
  --_10ruptcx: var(--_10ruptcu);
}
html:not(._18cjd3s10) ._10ruptc1b {
  --_10ruptcx: var(--_10ruptcs);
}
html:not(._18cjd3s10) ._10ruptc1c {
  --_10ruptcx: var(--_10ruptct);
}
html._18cjd3s10 ._10ruptc1d,
html._18cjd3s10 ._10ruptc1e,
html._18cjd3s10 ._10ruptc1f,
html._18cjd3s10 ._10ruptc1g {
  --_10ruptcx: var(--_10ruptcq);
}
html._18cjd3s10 ._10ruptc1h,
html._18cjd3s10 ._10ruptc1i {
  --_10ruptcx: var(--_10ruptcr);
}
html._18cjd3s10 ._10ruptc1j {
  --_10ruptcx: var(--_10ruptcu);
}
html._18cjd3s10 ._10ruptc1k {
  --_10ruptcx: var(--_10ruptcs);
}
html._18cjd3s10 ._10ruptc1l {
  --_10ruptcx: var(--_10ruptct);
}
._10ruptc1m {
  color: var(--_10ruptcq);
}
._10ruptc1n {
  color: var(--_10ruptcr);
}
._10ruptc1o {
  color: var(--_10ruptcs);
}
._10ruptc1p {
  color: var(--_10ruptct);
}
._10ruptc1q {
  color: var(--_10ruptcu);
}
._10ruptc1r {
  color: var(--_10ruptcv);
}
._10ruptc1s {
  color: var(--_10ruptcw);
}
._10ruptc1t {
  color: var(--_10ruptcx);
}
._10ruptc1u {
  color: var(--_10ruptcy);
}
._10ruptc1v {
  color: var(--_10ruptcz);
}
._10ruptc1w {
  padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl32)) / 2);
  padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl32)) / 2);
}
._10ruptc1x {
  padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl3c)) / 2);
  padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl3c)) / 2);
}
._10ruptc1y {
  padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl3m)) / 2);
  padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl3m)) / 2);
}
._10ruptc1z {
  padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl3w)) / 2);
  padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl3w)) / 2);
}
@media screen and (min-width: 740px) {
  ._10ruptc4 {
    --_1xascs90: var(--_1qis2nl36);
    --_1xascs91: var(--_1qis2nl37);
    --_1xascs92: var(--_1qis2nl39);
    --_1xascs93: var(--_1qis2nl3a);
  }
  ._10ruptc6 {
    --_1xascs90: var(--_1qis2nl3g);
    --_1xascs91: var(--_1qis2nl3h);
    --_1xascs92: var(--_1qis2nl3j);
    --_1xascs93: var(--_1qis2nl3k);
  }
  ._10ruptc8 {
    --_1xascs90: var(--_1qis2nl3q);
    --_1xascs91: var(--_1qis2nl3r);
    --_1xascs92: var(--_1qis2nl3t);
    --_1xascs93: var(--_1qis2nl3u);
  }
  ._10ruptca {
    --_1xascs90: var(--_1qis2nl40);
    --_1xascs91: var(--_1qis2nl41);
    --_1xascs92: var(--_1qis2nl43);
    --_1xascs93: var(--_1qis2nl44);
  }
  ._10ruptcc {
    font-size: var(--_1qis2nl36);
    line-height: var(--_1qis2nl37);
  }
  ._10ruptcd {
    font-size: var(--_1qis2nl3g);
    line-height: var(--_1qis2nl3h);
  }
  ._10ruptce {
    font-size: var(--_1qis2nl3q);
    line-height: var(--_1qis2nl3r);
  }
  ._10ruptcf {
    font-size: var(--_1qis2nl40);
    line-height: var(--_1qis2nl41);
  }
  ._10ruptci {
    --_1xascs90: var(--_1qis2nl4d);
    --_1xascs91: var(--_1qis2nl4e);
    --_1xascs92: var(--_1qis2nl4g);
    --_1xascs93: var(--_1qis2nl4h);
  }
  ._10ruptck {
    --_1xascs90: var(--_1qis2nl4n);
    --_1xascs91: var(--_1qis2nl4o);
    --_1xascs92: var(--_1qis2nl4q);
    --_1xascs93: var(--_1qis2nl4r);
  }
  ._10ruptcm {
    --_1xascs90: var(--_1qis2nl4x);
    --_1xascs91: var(--_1qis2nl4y);
    --_1xascs92: var(--_1qis2nl50);
    --_1xascs93: var(--_1qis2nl51);
  }
  ._10ruptco {
    --_1xascs90: var(--_1qis2nl57);
    --_1xascs91: var(--_1qis2nl58);
    --_1xascs92: var(--_1qis2nl5a);
    --_1xascs93: var(--_1qis2nl5b);
  }
  ._10ruptc1w {
    padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl37)) / 2);
    padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl37)) / 2);
  }
  ._10ruptc1x {
    padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl3h)) / 2);
    padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl3h)) / 2);
  }
  ._10ruptc1y {
    padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl3r)) / 2);
    padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl3r)) / 2);
  }
  ._10ruptc1z {
    padding-bottom: calc((var(--_1qis2nl9) - var(--_1qis2nl41)) / 2);
    padding-top: calc((var(--_1qis2nl9) - var(--_1qis2nl41)) / 2);
  }
}
._149dge16 {
  background: var(--_149dge10);
}
._149dge17 {
  background: var(--_149dge11);
}
._149dge18 {
  background: var(--_149dge12);
}
._149dge19 {
  background: var(--_149dge13);
}
._149dge1a {
  background: var(--_149dge14);
}
._149dge1b {
  background: var(--_149dge15);
}
html:not(._18cjd3s10) ._149dge1c {
  --_149dge10: var(--_1qis2nlw);
  --_149dge11: var(--_1qis2nlp);
  --_149dge12: var(--_1qis2nlu);
  --_149dge13: var(--_1qis2nlh);
  --_149dge14: var(--_1qis2nlj);
  --_149dge15: var(--_1qis2nln);
}
html:not(._18cjd3s10) ._149dge1d {
  --_149dge10: var(--_1qis2nlx);
  --_149dge11: var(--_1qis2nlq);
  --_149dge12: var(--_1qis2nlv);
  --_149dge13: var(--_1qis2nli);
  --_149dge14: var(--_1qis2nlk);
  --_149dge15: var(--_1qis2nlo);
}
html._18cjd3s10 ._149dge1e {
  --_149dge10: var(--_1qis2nlw);
  --_149dge11: var(--_1qis2nlp);
  --_149dge12: var(--_1qis2nlu);
  --_149dge13: var(--_1qis2nlh);
  --_149dge14: var(--_1qis2nlj);
  --_149dge15: var(--_1qis2nln);
}
html._18cjd3s10 ._149dge1f {
  --_149dge10: var(--_1qis2nlx);
  --_149dge11: var(--_1qis2nlq);
  --_149dge12: var(--_1qis2nlv);
  --_149dge13: var(--_1qis2nli);
  --_149dge14: var(--_1qis2nlk);
  --_149dge15: var(--_1qis2nlo);
}
._149dge1g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._149dge1h {
  width: var(--_1qis2nle);
}
._149dge1i {
  width: var(--_1qis2nla);
}
.dgluu30 {
  margin-bottom: -0.1em;
}
.dgluu32 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.dgluu30 .dgluu32 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .dgluu34 {
    display: -webkit-box;
    -webkit-line-clamp: var(--dgluu33);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__18cjd3s10,html.sprinkles_darkMode__18cjd3s10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1c69nho0 typography_lightModeTone_light__10ruptc10 typography_darkModeTone_dark__10ruptc13">
+        <div class="reset_base__1epyuoj0 sprinkles_paddingBottom_gutter_mobile__18cjd3s8p sprinkles_paddingTop_gutter_mobile__18cjd3s7l sprinkles_paddingLeft_gutter_mobile__18cjd3sax sprinkles_paddingRight_gutter_mobile__18cjd3s9t sprinkles_position_relative_mobile__18cjd3s5d sprinkles_borderRadius_large_mobile__18cjd3s69 sprinkles_textAlign_left_mobile__18cjd3si9 sprinkles_boxShadow_borderNeutralLight_lightMode__18cjd3s4j sprinkles_boxShadow_borderNeutral_darkMode__18cjd3s4c typography_lightModeTone_light__10ruptc10 typography_darkModeTone_dark__10ruptc13 sprinkles_background_surface_lightMode__18cjd3s33 sprinkles_background_surfaceDark_darkMode__18cjd3s36">
+          <span class="reset_base__1epyuoj0 sprinkles_display_block_mobile__18cjd3s4x typography_fontFamily__10ruptc0 typography_fontWeight_regular__10ruptc1 typography_tone_neutral__10ruptc1t typography_textSize_large__10ruptca capsize_capsizeStyle__1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
